--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App page</title>
-    
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
+
     <header>
-        <h1>Quiz App</h1>
-        <a href="./pages/login.html">login</a>
+        <div class="logo">Quiz Web App</div>
+        <button class="login-btn" onclick="location.href='./pages/login.html'">login</button>
     </header>
+
+    <div class="container">
+        <h1>Welcome To Our Quiz Web App</h1>
+    </div>
     
 </body>
 </html>
