--- a/pages/login.html
+++ b/pages/login.html
@@ -9,23 +9,24 @@
 
 <body>
     <section class="container">
-        <div class="form-box login-form">
+        <div class="form-box active" id="login-form">
             <h2>Login</h2>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" name="login">Login</button>
-            <p>Click here to <a href="">register</a></p>
+            <p>Click here to <a href="" onclick="event.preventDefault(); displayForm(`register-form`)">register</a></p>
         </div>
 
-        <div class="form-box register-form">
+        <div class="form-box" id="register-form">
             <h2>Register</h2>
             <input type="text" placeholder="Username" required>
             <input type="email" placeholder="Email" required>
             <input type="password" placeholder="Password" required>
             <button type="submit">Login</button>
-            <p>Click here to <a href="">register</a></p>
+            <p>Login if you have an <a href="" onclick="event.preventDefault(); displayForm(`login-form`)">account</a></p>
         </div>
     </section>
-    
+
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
