--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App page</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="./styles/login.css">
 </head>
+
 <body>
+    <section class="container">
+        <div class="form-box active" id="login-form">
+            <h2>Login</h2>
+            <input type="email" id="login-email" placeholder="Email" required>
+            <input type="password" id="login-pass"  placeholder="Password" required>
+            <button type="submit" onclick=" login()">Login</button>
+            <p>Click here to <a href="" onclick="event.preventDefault(); displayForm(`register-form`)">register</a></p>
+        </div>
 
-    <header>
-        <div class="logo">Quiz Web App</div>
-        <button class="login-btn" onclick="location.href='./pages/login.html'">login</button>
-    </header>
+        <div class="form-box" id="register-form">
+            <h2>Register</h2>
+            <input type="text" id="register-name" placeholder="Username" required>
+            <input type="email" id="register-email" placeholder="Email" required>
+            <input type="password" id="register-pass" placeholder="Password" required>
+            <button type="submit" onclick=" register()">Register</button>
+            <p>Login if you have an <a href="" onclick="event.preventDefault(); displayForm(`login-form`)">account</a></p>
+        </div>
+    </section>
 
-    <div class="container">
-        <h1>Welcome To Our Quiz Web App</h1>
-    </div>
-    
+    <script src="./scripts/login.js"></script>
 </body>
 </html>
