--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -4,17 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/quiz.css">
 </head>
 <body>
-    <div class="quiz-container">
-        <h2 id="quizTitle"></h2>
-        <div id="questionBox">
-            <p id="questionText"></p>
-            <div id="options"></div>
-        </div>
-        <button id="nextBtn" disabled>Next</button>
+    <div class="container">
+        <section class="quiz-section">
+            <div class="quiz-box">
+                <h1>Quiz App</h1>
+                <div class="quiz-header">
+                    <span class="title">Solve The Following Questions: </span>
+                    <span class="score">Score: 0 / 5</span>
+                </div>
+
+                <h2 class="question">Which of the following makes a side interactive?</h2>
+                <div class="option-list">
+                    <div class="option">
+                        <span>A. Website behavior</span>
+                    </div>
+                    <div class="option">
+                        <span>B. Website structure</span>
+                    </div>
+                    <div class="option">
+                        <span>C. Website style and layout</span>
+                    </div>
+                </div>
+
+                <div class="quiz-buttom">
+                    <span class="question-total">1 of 5 Question</span>
+                    <button class="next-btn">Next</button>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="../scripts/quiz.js"></script>
+    <script src="../scripts/seed.js"></script>
+    
 </body>
 </html>
